Fixed spacing between bottom paragraphs

--- a/public/screen.css
+++ b/public/screen.css
@@ -158,4 +158,5 @@ Bottom Text
 
 .columnParagraphs p{
   margin-top: 0;
+  margin-right: 1.5em;
 }
